--- a/index.html
+++ b/index.html
@@ -64,7 +64,18 @@
     <section id="hero">
         <!-- Flex Container -->
         <div
-          class="container flex flex-col-reverse items-center px-6 mx-auto mt-10 space-y-0 md:space-y-0 md:flex-row"
+          class="
+            container 
+            flex 
+            flex-col-reverse 
+            items-center 
+            px-6 
+            mx-auto 
+            mt-10 
+            space-y-0 
+            md:space-y-0 
+            md:flex-row
+          "
         >
           <!-- Left item -->
           <div class="flex flex-col mb-32 space-y-12 md:w-1/2">
@@ -85,8 +96,8 @@
                     >
                 </div>
             </div>
-            <div class="md:w-1/2">
-                <img src="./img/illustration-intro.svg" alt="">
+            <div class="md:w-1/2 w-[25%]">
+                <img src="./img/illustration-intro.svg" alt="Programmer" className="">
             </div>
         </div>
       </section>
